[server] 加入API文件
